# leavetaking

./: .env.example  .gitignore  .python-version  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.beads/: .beads-credential-key  metadata.json
api/: deps.py  main.py
api/queries/: graph_trail.py  scores.py
api/routes/: config.py  graph_trail.py  scores.py
extension/: background.js  badge.css  content.js  manifest.json  popup.html  popup.js  scores.json
infra/: azure-crossplane-bootstrap.sh
infra/manifests/: kind-cluster.yaml
infra/manifests/capi/: cluster.yaml  control-plane.yaml  workers.yaml
infra/manifests/crossplane/: composition-network.yaml  network-claim.yaml  provider-azure.yaml  provider-config.yaml  xrd-network.yaml
pipeline/: config.py  run_pipeline.py
pipeline/fetchers/: fec.py  opencorporates.py  scorecards.py  wikidata.py
pipeline/loaders/: graph_loader.py
pipeline/processors/: brand_resolver.py  entity_resolution.py  score_computation.py  scorecard_resolver.py
schema/: constraints.cypher  seed_fortune100.cypher  seed_issues.cypher
scripts/: bootstrap_brands.py  export_scores.py
tests/: test_brand_resolver.py  test_entity_resolution.py  test_fec_fetcher.py  test_graph_loader.py  test_opencorporates_fetcher.py  test_pipeline.py  test_queries.py  test_run_pipeline.py  test_score_computation.py  test_scorecard_fetcher.py  test_scorecard_resolver.py  test_wikidata_fetcher.py
